--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Compress your images easily with our Image Compressor tool. Fast, free, and reliable.">
+  <title>Image Compressor - AI Tools</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #eef2f3, #8e9eab);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      background-color: #007bff;
+      color: #fff;
+      padding: 15px 20px;
+      text-align: center;
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+    .tool-card {
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      padding: 20px;
+      max-width: 350px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .tool-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+    .tool-card img {
+      width: 100%;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    .btn {
+      margin-top: 15px;
+      display: inline-block;
+      background: #007bff;
+      color: #fff;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    .btn:hover {
+      background: #0056b3;
+    }
+    footer {
+      background-color: #f1f1f1;
+      text-align: center;
+      padding: 10px;
+      font-size: 0.9em;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    AI Tools Hub
+  </header>
+
+  <main>
+    <div class="tool-card">
+      <!-- Image for your tool -->
+      <a href="img.comprasar">
+        <img src="https://via.placeholder.com/350x200?text=Image+Compressor" alt="Image Compressor">
+      </a>
+      <p>Click the image or the button below to open the Image Compressor tool.</p>
+      <a href="img.comprasar" class="btn">Open Image Compressor</a>
+    </div>
+  </main>
+
+  <footer>
+    &copy; 2025 AI Tools Hub. All rights reserved.
+  </footer>
+
+</body>
+</html>
